Update to latest build tools; indentation.

--- a/android-benchmark/build.gradle
+++ b/android-benchmark/build.gradle
@@ -22,11 +22,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.tozny.e3db.benchmark"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -36,10 +36,10 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.2.30"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.2.30"
     androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:rules:0.4.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'dk.ilios:spanner:0.6.0'
     androidTestImplementation project(path: ':e3db')
     androidTestImplementation project(path: ':e3db-crypto-interface')
