--- a/androidtest/build.gradle
+++ b/androidtest/build.gradle
@@ -1,3 +1,5 @@
+import com.android.build.gradle.internal.tasks.AndroidTestTask
+
 /*
  * TOZNY NON-COMMERCIAL LICENSE
  *
@@ -20,74 +22,79 @@
 
 apply plugin: 'com.android.application'
 
+static def regToken() {
+  System.getenv("REGISTRATION_TOKEN")
+}
+
+static def apiUrl() {
+  System.getenv("DEFAULT_API_URL") == null ? "https://api.e3db.com" : System.getenv("DEFAULT_API_URL")
+}
+
 android {
-    compileSdkVersion 26
+  compileSdkVersion 27
 
-    defaultConfig {
-        applicationId "com.tozny.e3dbtest"
-        minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+  defaultConfig {
+    applicationId "com.tozny.e3dbtest"
+    minSdkVersion 16
+    targetSdkVersion 27
+    versionCode 1
+    versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        vectorDrawables.useSupportLibrary = true
+    vectorDrawables.useSupportLibrary = true
+  }
+  buildTypes {
+    debug {
+      buildConfigField "String", "REGISTRATION_TOKEN", "\"${regToken()}\""
+      buildConfigField "String", "DEFAULT_API_URL", "\"${apiUrl()}\""
     }
-    buildTypes {
-        debug {
-            buildConfigField "String", "REGISTRATION_TOKEN", "\"${System.getenv("REGISTRATION_TOKEN") == null ? "": System.getenv("REGISTRATION_TOKEN")}\""
-            buildConfigField "String", "DEFAULT_API_URL", "\"${System.getenv("DEFAULT_API_URL") == null ? "https://api.e3db.com" : System.getenv("DEFAULT_API_URL")}\""
-        }
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "REGISTRATION_TOKEN", "\"${System.getenv("REGISTRATION_TOKEN") == null ? "x" : System.getenv("REGISTRATION_TOKEN")}\""
-            buildConfigField "String", "DEFAULT_API_URL", "\"${System.getenv("DEFAULT_API_URL") == null ? "https://api.e3db.com" : System.getenv("DEFAULT_API_URL")}\""
-        }
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      buildConfigField "String", "REGISTRATION_TOKEN", "\"${regToken()}\""
+      buildConfigField "String", "DEFAULT_API_URL", "\"${apiUrl()}\""
     }
-    sourceSets.androidTest.java {
-        srcDirs = ['src/androidTest/java', "${project(":common-test").projectDir}/src/test/java"]
-    }
+  }
+  sourceSets.androidTest.java {
+    srcDirs = ['src/androidTest/java', "${project(":common-test").projectDir}/src/test/java"]
+  }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation 'com.android.support:appcompat-v7:27.1.1'
+  implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
-    implementation 'com.android.support:appcompat-v7:26.0.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+  implementation 'com.android.support:design:27.1.1'
+  implementation 'com.android.support:support-vector-drawable:27.1.1'
+  implementation 'com.android.support:support-v4:27.1.1'
+  androidTestImplementation 'com.android.support.test:runner:1.0.2'
+  androidTestImplementation 'com.android.support.test:rules:1.0.2'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+  androidTestImplementation 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
+  androidTestImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
+  androidTestImplementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
+  androidTestImplementation 'com.goterl.lazycode:lazysodium-android:2.5.0@aar'
 
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:support-vector-drawable:26.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    androidTestImplementation 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
-    androidTestImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
-    androidTestImplementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
-    androidTestImplementation 'com.goterl.lazycode:lazysodium-android:2.5.0@aar'
+  androidTestImplementation project(path: ':e3db')
+  androidTestImplementation project(path: ':e3db-crypto-interface')
+  androidTestImplementation(project(path: ':e3db-crypto-android')) {
+    transitive = true
+  }
 
-    androidTestImplementation project(path: ':e3db')
-    androidTestImplementation project(path: ':e3db-crypto-interface')
-    androidTestImplementation(project(path: ':e3db-crypto-android')) {
-        transitive = true
-    }
-
-    implementation project(path: ':e3db')
-    implementation project(path: ':e3db-crypto-interface')
-    implementation(project(path: ':e3db-crypto-android')) {
-        transitive = true
-    }
+  implementation project(path: ':e3db')
+  implementation project(path: ':e3db-crypto-interface')
+  implementation(project(path: ':e3db-crypto-android')) {
+    transitive = true
+  }
 }
 
-tasks.withType(Test) {
-    // always re-run tests
-    outputs.upToDateWhen { false }
-    testLogging {
-        showStackTraces = true
-        exceptionFormat = "full"
-    }
+tasks.withType(AndroidTestTask) {
+  doFirst {
+    // Fail early if mobile registration token hasn't been set
+    if(regToken() == null)
+      throw new Error("Regisration token not defined for android unit tests.")
+  }
 }
 
 apply plugin: 'kotlin-android'
