--- a/settings.gradle
+++ b/settings.gradle
@@ -34,6 +34,7 @@ include (':e3db',
         ':common-test')
 
 include(':e3db-fips',
+    ':e3db-fips:android-fips-test',
     ':e3db-fips:e3db-crypto-fips-android',
     ':e3db-fips:publish:android',
     ':e3db-fips:e3db-crypto-fips-plain',
