--- a/e3db/build.gradle
+++ b/e3db/build.gradle
@@ -28,9 +28,9 @@ dependencies {
 
     compile 'com.squareup.retrofit2:retrofit:2.4.0'
 //    compile 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
     compile project(':e3db-crypto-interface')
 }
 
