--- a/settings.gradle
+++ b/settings.gradle
@@ -40,5 +40,11 @@ if(file("e3db-fips").exists()) {
       ':e3db-fips:publish:android',
       ':e3db-fips:e3db-crypto-fips-plain',
       ':e3db-fips:publish:plain',
-      ':e3db-fips:plain-fips-test')
+      ':e3db-fips:plain-fips-test',
+      ':e3db-fips:e3db-crypto-fips-plain-stub',
+      ':e3db-fips:e3db-crypto-fips-android-stub',
+      ':e3db-fips:e3db-crypto-fips-common',
+      ':e3db-fips:e3db-crypto-fips-interface'
+  )
 }
+
