--- a/plaintest/build.gradle
+++ b/plaintest/build.gradle
@@ -39,6 +39,7 @@ dependencies {
   testCompile 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
   testCompile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
   testCompile 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
+  testCompile 'org.mockito:mockito-core:1.10.19'
 }
 
 test {
