--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -71,7 +71,7 @@ publishing {
         classifier "sources"
       }
 
-      artifact bundleRelease
+      artifact bundleReleaseAar
 
       pom.withXml {
         def dependenciesNode = asNode().appendNode('dependencies')
