[BUG-FIX] Large Files now encrypt properly
- Fix to encryptFile method in PlainCrypto
- Test to ensure that large files encrypt and decrypt successfully

--- a/androidtest/build.gradle
+++ b/androidtest/build.gradle
@@ -67,6 +67,8 @@ dependencies {
   androidTestImplementation 'com.fasterxml.jackson.core:jackson-core:2.9.0'
   androidTestImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
   androidTestImplementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
+  androidTestImplementation "commons-io:commons-io:2.6"
+  androidTestImplementation "org.assertj:assertj-core:2.9.1"
 
   androidTestImplementation 'com.goterl.lazycode:lazysodium-android:2.5.0@aar'
 
