--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.30"
         classpath 'digital.wup:android-maven-publish:3.2.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath "commons-io:commons-io:2.6"
+        classpath "org.assertj:assertj-core:2.9.1"
     }
 }
 
