--- a/plaintest/build.gradle
+++ b/plaintest/build.gradle
@@ -41,6 +41,8 @@ dependencies {
   testCompile 'com.fasterxml.jackson.core:jackson-core:2.9.0'
   testCompile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
   testCompile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
+  testCompile "commons-io:commons-io:2.6"
+  testCompile "org.assertj:assertj-core:2.9.1"
 }
 
 tasks.withType(Test) {
