[ID-41] Adds premium notes read, write, delete
- No signatures
- No anonymous notes

--- a/e3db/build.gradle
+++ b/e3db/build.gradle
@@ -26,11 +26,15 @@ dependencies {
     compileOnly project(':e3db-crypto-stub-plain')
     compileOnly project(':e3db-crypto-stub-android')
 
-    compile 'com.squareup.retrofit2:retrofit:2.4.0'
+    compile 'com.squareup.retrofit2:retrofit:2.6.1'
+    compile 'com.squareup.retrofit2:converter-jackson:2.6.1'
 //    compile 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     compile 'com.fasterxml.jackson.core:jackson-core:2.9.0'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.0'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.0'
+
     compile project(':e3db-crypto-interface')
 }
 
