--- a/plaintest/build.gradle
+++ b/plaintest/build.gradle
@@ -33,16 +33,16 @@ sourceSets.test.java {
 dependencies {
   testImplementation project(":common-test")
   testCompile("junit:junit:[4,)")
-  testCompile project(path: ':e3db')
-  testCompile project(path: ':e3db-crypto-interface')
+  testImplementation project(path: ':e3db')
+  testImplementation project(path: ':e3db-crypto-interface')
   testCompile(project(path: ':e3db-crypto-plain')) {
     transitive = true
   }
-  testCompile 'com.fasterxml.jackson.core:jackson-core:2.9.0'
-  testCompile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
-  testCompile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
-  testCompile "commons-io:commons-io:2.6"
-  testCompile "org.assertj:assertj-core:2.9.1"
+  testImplementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
+  testImplementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
+  testImplementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+  testImplementation "commons-io:commons-io:2.6"
+  testImplementation "org.assertj:assertj-core:2.9.1"
 }
 
 tasks.withType(Test) {
