--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+apply plugin: 'kotlin'
+apply plugin: 'java'
+
 buildscript {
     repositories {
         jcenter()
@@ -29,9 +32,9 @@ buildscript {
         maven { url "https://maven.tozny.com/repo" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.0.0"
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.2'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:1.0.0'
         classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
@@ -58,9 +61,9 @@ ext {
     retrofitVersion = "2.7.1"
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+//task clean(type: Delete) {
+//    delete rootProject.buildDir
+//}
 
 /*
  * Set the gradle property "java7Home" to the root of a Java 7 JDK to ensure compilation
