--- a/e3db-crypto-interface/build.gradle
+++ b/e3db-crypto-interface/build.gradle
@@ -18,6 +18,7 @@
  *
  */
 
+apply plugin: 'kotlin'
 apply plugin: 'java'
 
 dependencies {
@@ -25,5 +26,5 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.13.0'
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
