--- a/e3db/build.gradle
+++ b/e3db/build.gradle
@@ -18,6 +18,7 @@
  *
  */
 
+apply plugin: 'kotlin'
 apply plugin: 'java'
 
 
@@ -27,14 +28,16 @@ dependencies {
     compileOnly project(':e3db-crypto-stub-plain')
     compileOnly project(':e3db-crypto-stub-android')
 
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
     compile "com.squareup.retrofit2:converter-jackson:$retrofitVersion"
-    compile 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+//    compile 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
     compile "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jacksonVersion"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion"
 
     compile project(':e3db-crypto-interface')
 }
@@ -56,4 +59,26 @@ javadoc {
     destinationDir = file("${rootDir}/docs/docs/${project(":publish").ext.version}")
     options.noQualifiers "java.lang", "java.util"
     classpath = files([project(":e3db").sourceSets.main.compileClasspath.files])
+}
+buildscript {
+    ext.kotlin_version = '1.3.61'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+repositories {
+    mavenCentral()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
