--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -22,16 +22,16 @@
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.getkeepsafe.dexcount'
-
+apply plugin: 'kotlin-android'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 android {
-  compileSdkVersion 27
+  compileSdkVersion 29
   defaultConfig {
-    minSdkVersion 16
-    targetSdkVersion 27
+    minSdkVersion 21
+    targetSdkVersion 29
   }
   sourceSets {
     main {
