--- a/publish/plain/build.gradle
+++ b/publish/plain/build.gradle
@@ -18,6 +18,7 @@
  *
  */
 
+apply plugin: 'kotlin'
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 apply plugin: 'com.github.johnrengelman.shadow'
@@ -74,6 +75,7 @@ dependencies {
     ExternalModuleDependency.class.isAssignableFrom(dep.class)
   }
   compileOnly project(":e3db").configurations.compileOnly.dependencies
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 
@@ -128,5 +130,27 @@ uploadArchives {
         }
       }
     }
+  }
+}
+buildscript {
+  ext.kotlin_version = '1.3.61'
+  repositories {
+    mavenCentral()
+  }
+  dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  }
+}
+repositories {
+  mavenCentral()
+}
+compileKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
+}
+compileTestKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
   }
 }
