--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -67,7 +67,7 @@ evaluationDependsOn(':publish')
 
 task sourceJar(type: Jar) {
     classifier = 'sources'
-    from android.sourceSets.main.java.sourceFiles
+    from android.sourceSets.main.java.srcDirs
 }
 
 
