--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -28,10 +28,10 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         minSdkVersion 23
-        targetSdkVersion 29
+        targetSdkVersion 30
     }
     sourceSets {
         main {
@@ -56,6 +56,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
     lintOptions {
         disable 'InvalidPackage'
