--- a/publish/plain/build.gradle
+++ b/publish/plain/build.gradle
@@ -147,8 +147,7 @@ repositories {
 }
 compileKotlin {
   kotlinOptions {
-    jvmTarget = "1.8"
-  }
+    jvmTarget = JavaVersion.VERSION_1_8.toString()  }
 }
 compileTestKotlin {
   kotlinOptions {
