--- a/androidtest/build.gradle
+++ b/androidtest/build.gradle
@@ -23,16 +23,16 @@ import com.android.build.gradle.internal.tasks.AndroidTestTask
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 29
+  compileSdkVersion 30
 
   defaultConfig {
     applicationId "com.tozny.e3dbtest"
     minSdkVersion 23
-    targetSdkVersion 29
+    targetSdkVersion 30
     versionCode 1
     versionName "1.0"
 
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     vectorDrawables.useSupportLibrary = true
   }
@@ -58,15 +58,15 @@ android {
 }
 
 dependencies {
-  implementation 'com.android.support:appcompat-v7:27.1.1'
-  implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+  implementation 'androidx.appcompat:appcompat:1.0.0'
+  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-  implementation 'com.android.support:design:27.1.1'
-  implementation 'com.android.support:support-vector-drawable:27.1.1'
-  implementation 'com.android.support:support-v4:27.1.1'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test:rules:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+  implementation 'com.google.android.material:material:1.0.0'
+  implementation 'androidx.vectordrawable:vectordrawable:1.0.0'
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+  androidTestImplementation 'androidx.test:rules:1.1.1'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
   androidTestImplementation 'com.fasterxml.jackson.core:jackson-core:2.9.0'
   androidTestImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
