Update sdk to androidx
- This needed to be done at some point to access features and
some new back compatability

--- a/common-test/build.gradle
+++ b/common-test/build.gradle
@@ -27,7 +27,7 @@ compileTestJava {
 }
 
 dependencies {
-  testImplementation("junit:junit:[4,)")
+  testImplementation("junit:junit:4.13.2")
   implementation project(path: ':e3db')
   implementation project(path: ':e3db-crypto-interface')
   compileOnly project(":e3db-crypto-stub-plain")
