--- a/e3db-crypto-stub-android/build.gradle
+++ b/e3db-crypto-stub-android/build.gradle
@@ -22,7 +22,7 @@ apply plugin: 'kotlin'
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     compileOnly project(':e3db-crypto-interface')
 }
 
