--- a/androidtest/build.gradle
+++ b/androidtest/build.gradle
@@ -59,6 +59,7 @@ android {
 
 dependencies {
   implementation 'androidx.appcompat:appcompat:1.2.0'
+  implementation 'androidx.biometric:biometric:1.1.0'
   androidTestImplementation 'androidx.biometric:biometric:1.1.0'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
