--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ buildscript {
         jcenter()
         google()
         mavenCentral()
-        mavenLocal()
+//        mavenLocal()
         maven { url "https://maven.tozny.com/repo" }
     }
     dependencies {
@@ -53,9 +53,6 @@ allprojects {
         mavenCentral()
         mavenLocal()
         maven { url 'https://jitpack.io' }
-        maven {
-            url  "https://dl.bintray.com/terl/lazysodium-maven"
-        }
     }
 }
 
