--- a/e3db-crypto-android/build.gradle
+++ b/e3db-crypto-android/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     compileOnly project(':e3db-crypto-interface')
-    implementation 'com.goterl.lazycode:lazysodium-android:2.5.0@aar'
+    implementation 'com.goterl:lazysodium-android:5.0.2@aar'
     implementation 'net.java.dev.jna:jna:4.5.1@aar'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.core:core:1.3.2'
