Working commit upgrading gradle to 7.x

--- a/androidtest/build.gradle
+++ b/androidtest/build.gradle
@@ -101,4 +101,4 @@ tasks.withType(AndroidTestTask) {
 }
 
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
