--- a/build.gradle
+++ b/build.gradle
@@ -20,15 +20,14 @@
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-apply plugin: 'kotlin'
-apply plugin: 'java'
+//apply plugin: 'kotlin'
+//apply plugin: 'java'
 
 
 buildscript {
    ext.kotlin_plugin_version = '1.4.30'
    ext.kotlin_jdk8_version = '1.4.30'
     repositories {
-        jcenter()
         google()
         mavenCentral()
 //        mavenLocal()
@@ -46,9 +45,18 @@ buildscript {
     }
 }
 
+plugins {
+    id "java"
+    id 'org.jetbrains.kotlin.jvm' version '1.4.30'
+    id "com.github.hierynomus.license-report" version"0.15.0"
+}
+
+downloadLicenses {
+
+}
+
 allprojects {
     repositories {
-        jcenter()
         google()
         mavenCentral()
         mavenLocal()
@@ -87,4 +95,9 @@ def apiUrl() {
         else
             "https://api.e3db.com"
     }
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
